--- a/frontend/src/components/navbar.css
+++ b/frontend/src/components/navbar.css
@@ -76,7 +76,7 @@
     left: 0;
     opacity: 1;
     transition: all 0.5s ease;
-    z-index: 1;
+    z-index: 100;
   }
 
   .nav-link {
