--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -33,19 +33,20 @@ a {
 }
 
 .form-group input,
-.form-group textarea {
+.form-group textarea,
+.form-group .select {
   padding: 0.5rem 0.8rem;
-  margin-top: 0.2rem;
+  margin-top: 0.3rem;
   border: 1px solid #bbb;
-  border-radius: 20px;
-  border-bottom: 1px solid transparent;
+  border-radius: 25px;
+  border-bottom: 0.5px solid rgba(255, 255, 255, 0.2);
   background-color: #fff;
   font-size: 0.9rem;
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .btn {
-  margin: 20px 0;
+  margin: 10px 0;
   padding: 10px 20px;
   cursor: pointer;
   width: 100%;
